First tests on robot

--- a/Resources/log.html
+++ b/Resources/log.html
@@ -1727,13 +1727,13 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,26],[],[[5,0,1,0,[],[1,24,2],[[0,6,7,0,8,9,0,0,[1,25,0],[],[]],[0,10,11,0,0,12,0,0,[1,25,0],[],[]]]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,4,[],[1,0,25],[],[[5,0,1,0,[],[1,23,2],[[0,6,7,0,8,9,0,0,[1,23,1],[],[]],[0,10,7,0,11,12,0,0,[1,24,0],[],[]],[0,13,7,0,14,15,0,0,[1,24,0],[],[]]]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*/home/ITRANSITION.CORP/a.mishchenko/PycharmProjects/newtest/Resources/Test.robot","*Test.robot","*<p>Suite description\x3c/p>","*Some first tests","*Convert To String","*BuiltIn","*<p>Converts the given item to a Unicode string.\x3c/p>","*5","*Hello","*New","*goioh"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*/home/ITRANSITION.CORP/a.mishchenko/PycharmProjects/newtest/Resources/Test.robot","*Test.robot","*<p>Suite description\x3c/p>","*Some first tests","*Convert To String","*BuiltIn","*<p>Converts the given item to a Unicode string.\x3c/p>","*5","*Convert To Integer","*<p>Converts the given item to an integer number.\x3c/p>","*54546","*Catenate","*<p>Catenates the given items together and returns the resulted string.\x3c/p>","*@{STROKA} kokopk"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Test","name":"Test","pass":1}]];
@@ -1742,10 +1742,10 @@ window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Test
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1489564106292;
+window.output["baseMillis"] = 1489565129041;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 30;
+window.output["generated"] = 29;
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"NONE","reportURL":"report.html","splitLogBase":"log","title":""};
